--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=FamilyPlanner
 APP_ENV=local
-APP_KEY=base64:SK/hripJrsPyo8aK6bwkibcaOmkAxCEyv29ZdZ6r6Eg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
